# localenv

./: Cargo.toml  README.md
config_example/: localenv.yaml
config_example/static/alacritty/: alacritty.yml
config_example/static/nu/: config.toml
config_example/static/tmux/: tmux.conf
myenv/: localenv.yaml
myenv/static/nu/: config.toml
src/: error.rs  main.rs  prelude.rs
src/cli/: exit.rs  helper.rs  mod.rs
src/cli/subcommands/: apply.rs  mod.rs  plan.rs
src/config/: command.rs  filesystem.rs  mod.rs
src/operation/: apply.rs  display.rs  mod.rs  operation.rs  plan.rs
src/operation/installer/: cargo.rs  installer.rs  mod.rs
src/system/: api.rs  command.rs  mod.rs  os.rs  system.rs
