[package]
authors = ["ymgyt <yamaguchi7073xtt@gmail.com>"]
edition = "2018"
name = "localenv"
version = "0.1.0"
[dependencies]
backtrace = "0.3"
colored = "2"
serde_yaml = "0.8"
structopt = "0.3.21"
tracing = "0.1"
tracing-subscriber = "0.2"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.tokio]
features = ["io-util", "rt", "rt-multi-thread", "fs"]
version = "1"
